RESOLVED FIXED Bug 47159
CSS 2.1 failure: background-position-201, background-position-202
https://bugs.webkit.org/show_bug.cgi?id=47159
Summary CSS 2.1 failure: background-position-201, background-position-202
Simon Fraser (smfr)
Reported 2010-10-04 21:53:02 PDT
Created attachment 69754 [details] background-position-202.htm These tests fail: html4/background-position-201 fail html4/background-position-202 fail
Attachments
background-position-202.htm (8.32 KB, text/html)
2010-10-04 21:53 PDT, Simon Fraser (smfr)
no flags
Patch (1.46 MB, patch)
2011-03-11 11:41 PST, Dave Hyatt
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2011-01-08 13:48:27 PST
The bug seems to be that we parse background-position: bottom 100%; as valid, when the spec says: "If at least one value is not a keyword, then the first value represents the horizontal position and the second represents the vertical position". http://www.w3.org/TR/CSS21/colors.html#propdef-background-position
Dave Hyatt
Comment 2 2011-03-11 11:41:01 PST
WebKit Review Bot
Comment 3 2011-03-11 11:44:18 PST
Attachment 85503 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/css/CSSParser.cpp:2579: An else should appear on the same line as the preceding } [whitespace/newline] [4] Source/WebCore/css/CSSParser.cpp:2627: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 2 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4 2011-03-11 11:45:51 PST
Comment on attachment 85503 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=85503&action=review > Source/WebCore/css/CSSParser.h:93 > + enum FillPositionFlag { InvalidFillPosition = 0, AmbiguousFillPosition = 1, XFillPosition = 2, YFillPosition = 4 }; If this is a bitmask I'd prefer to see 0, 1 << 0, 1 << 1, 1 << 2
Dave Hyatt
Comment 5 2011-03-11 11:56:59 PST
Fixed in r80868.
Build Bot
Comment 6 2011-03-11 12:07:41 PST
Andreas Kling
Comment 7 2011-03-11 12:17:53 PST
*** Bug 41201 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 8 2011-03-11 12:19:09 PST
http://trac.webkit.org/changeset/80868 might have broken Windows Release (Build) and Windows Debug (Build)
Note You need to log in before you can comment on or make changes to this bug.