https://bugs.webkit.org/show_bug.cgi?id=47159

Reviewed by Simon Fraser.

CSS2.1 failures in background position parsing.

Rewrite background position component parsing to match the spec.  Our old parsing would allow "100% left" to be valid
when it should not have.  Rename parseFillPositionXY to parseFillPositionComponent and pass in enough information for
it to understand what the first component was.

For individual property parsing using background-position-x/y, I added new functions that just handle that without
worrying about the other component.

In order to pass the CSS2.1 test, I also had to fix multiple background parsing.  The number of layers in multiple
backgrounds is determined solely by the background-image property and not by any of the other properties.  cullEmptyLayers
has been changed to always consider a layer empty if it has no image set, even if other properties are set.

A number of layout tests had to be patched as they were invalid.  A couple of them relied on incorrect background-position
parsing (e.g., "50 left") and another relied on incorrect multiple background parsing.  It's not clear if the computed style
should actually include the additional values when no image is set though, so that should perhaps be the subject of a
follow-up bug.

Added fast/backgrounds/background-position-parsing.html

Source/WebCore:

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFillPositionX):
(WebCore::CSSParser::parseFillPositionY):
(WebCore::CSSParser::parseFillPositionComponent):
(WebCore::CSSParser::parseFillPosition):
(WebCore::CSSParser::parseFillProperty):
(WebCore::CSSParser::parseTransformOrigin):
(WebCore::CSSParser::parsePerspectiveOrigin):
* css/CSSParser.h:
* rendering/style/FillLayer.cpp:
(WebCore::FillLayer::fillUnsetProperties):
(WebCore::FillLayer::cullEmptyLayers):

LayoutTests:

* fast/backgrounds/background-position-1.html:
* fast/backgrounds/background-position-parsing.html: Added.
* fast/backgrounds/multiple-backgrounds-computed-style-expected.txt:
* fast/backgrounds/repeat/parsing-background-repeat-expected.txt:
* fast/backgrounds/repeat/script-tests/parsing-background-repeat.js:
* fast/backgrounds/resources/diamond.png: Added.
* fast/backgrounds/resources/ring.png: Added.
* fast/backgrounds/script-tests/multiple-backgrounds-computed-style.js:
* platform/mac/fast/backgrounds/animated-svg-as-background-expected.checksum:
* platform/mac/fast/backgrounds/animated-svg-as-background-expected.png:
* platform/mac/fast/backgrounds/animated-svg-as-mask-expected.checksum:
* platform/mac/fast/backgrounds/animated-svg-as-mask-expected.png:
* platform/mac/fast/backgrounds/background-position-parsing-expected.checksum: Added.
* platform/mac/fast/backgrounds/background-position-parsing-expected.png: Added.
* platform/mac/fast/backgrounds/background-position-parsing-expected.txt: Added.
* platform/mac/fast/backgrounds/bgCompositeCopy-expected.png:
* platform/mac/fast/backgrounds/repeat/noRepeatCorrectClip-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize01-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize03-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize05-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize06-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize07-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize08-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize09-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize10-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize11-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize12-expected.png:
* platform/mac/fast/backgrounds/size/backgroundSize22-expected.checksum:
* platform/mac/fast/backgrounds/size/backgroundSize22-expected.png:
* platform/mac/fast/backgrounds/size/contain-and-cover-expected.checksum:
* platform/mac/fast/backgrounds/size/contain-and-cover-expected.png:
* platform/mac/fast/backgrounds/svg-as-background-4-expected.png:



Canonical link: https://commits.webkit.org/70754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80868 268f45cc-cd09-0410-ab3c-d52691b4dbfc