LayoutTests/fast/backgrounds/repeat/script-tests/parsing-background-repeat.js
@@ -27,7 +27,7 @@ shouldBe('test("background: purple url(resources/gradient.gif) repeat-x top left
 shouldBe('test("background: purple url(resources/gradient.gif) repeat-y 50% 50%")', '"repeat-y"');
 shouldBe('test("background: purple url(resources/gradient.gif) repeat center")', '"repeat"');
 shouldBe('test("background: purple url(resources/gradient.gif) no-repeat 12px")', '"no-repeat"');
-shouldBe('test("background: purple url(resources/gradient.gif) round 50 left")', '"round"');
+shouldBe('test("background: purple url(resources/gradient.gif) round left 50")', '"round"');
 shouldBe('test("background: purple url(resources/gradient.gif) space 25 25")', '"space"');
 
 shouldBe('test("background-repeat: 45;")', 'null');
